src/assets/style/Collapse.module.css
:root {
    --collapse-bg-color: #f6f6f6;
    --collapse-header-bg-color: var(--color-bg-secondary);
    --collapse-header-txt-color: var(--color-txt-secondary);
    --collapse-transition-duration: .2s;
}

.collapse {
    border-radius: 10px;
    box-sizing: border-box;
    background-color: transparent;
    transition: background-color 0s var(--collapse-transition-duration);
}

.collapse.open {
    background-color: var(--bg-color);
    transition: none;
}

.collapse header {
    border-radius: 10px;
    background: var(--collapse-header-bg-color);
    color: var(--collapse-header-txt-color);
    padding: .875rem 1.25rem;
    justify-content: space-between;
    align-items: center;
}

.content {
    font-size: 1.125rem;
    font-weight: 400;
    line-height: 1.625rem;
    overflow: hidden;
    height: 0;
    box-sizing: border-box;
    transition: height var(--collapse-transition-duration) ease-out;
}

.content > * {
    padding: 1.875rem 1.25rem;
}

.content ul {
    list-style: none;
}

/* TODO : Put icon class in App.css */
.icon {
    position: relative;
    width: 24px;
    height: 24px;
    display: block;
}

.icon::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    width: 100%;
    height: 100%;
    transform: translate(-50%, -50%);
    background: transparent no-repeat center center;
    background-size: contain;
}

.chevron::after {
    background-image: url("../img/chevron-round.svg");
    cursor: pointer;
    transition: transform .2s ease-out;
}

.open .chevron::after{
    transform: translate(-50%, -50%) rotateZ(180deg);
}

